--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "node": "node server/index.js",
     "webpack": "webpack --mode=development --env=development",
     "webpack-production": "webpack --mode=production --env=production",
+    "test": "node ./node_modules/karma/bin/karma start karma.conf.js",
     "pull": "git pull && npm run webpack-production && npm restart"
   },
   "author": "Kayne Ruse",
@@ -29,22 +30,33 @@
     "forever": "^1.0.0",
     "formidable": "^1.2.1",
     "mysql": "^2.17.1",
-    "query-string": "^6.5.0",
+    "query-string": "^6.7.0",
     "react": "^16.8.6",
     "react-dom": "^16.8.6",
     "react-ga": "^2.5.7",
     "react-loadable": "^5.5.0",
     "react-markdown": "^4.0.8",
-    "react-redux": "^7.0.3",
-    "react-router": "^5.0.0",
-    "react-router-dom": "^5.0.0",
+    "react-redux": "^7.1.0",
+    "react-router": "^5.0.1",
+    "react-router-dom": "^5.0.1",
     "redux": "^4.0.1",
     "redux-devtools": "^3.5.0",
     "redux-devtools-dock-monitor": "^1.1.3",
     "redux-devtools-log-monitor": "^1.4.0",
     "redux-thunk": "^2.3.0",
     "sendmail": "^1.4.1",
-    "webpack": "^4.32.2",
-    "webpack-cli": "^3.3.2"
+    "webpack": "^4.34.0",
+    "webpack-cli": "^3.3.4"
+  },
+  "devDependencies": {
+    "jasmine-core": "^3.4.0",
+    "karma": "^4.1.0",
+    "karma-chrome-launcher": "^2.2.0",
+    "karma-cli": "^2.0.0",
+    "karma-coverage": "^1.1.2",
+    "karma-firefox-launcher": "^1.1.0",
+    "karma-jasmine": "^2.0.1",
+    "karma-webpack": "^4.0.2",
+    "puppeteer": "^1.17.0"
   }
 }
