--- a/package.json
+++ b/package.json
@@ -10,8 +10,23 @@
     "node": "node server/index.js",
     "webpack": "webpack --mode=development --env=development",
     "webpack-production": "webpack --mode=production --env=production",
-    "test": "node ./node_modules/karma/bin/karma start karma.conf.js",
+    "clienttest": "node ./node_modules/karma/bin/karma start karma.conf.js",
+    "servertest": "nyc jasmine",
+    "fulltest": "npm run servertest && npm run clienttest",
     "pull": "git pull && npm run webpack-production && npm restart"
+  },
+  "nyc": {
+    "check-coverage": true,
+    "all": true,
+    "include": [
+      "server/**/*.js*",
+      "spec/**/*.js*"
+    ],
+    "reporter": [
+      "html",
+      "text-summary"
+    ],
+    "report-dir": "coverage/server"
   },
   "author": "Kayne Ruse",
   "license": "",
@@ -49,7 +64,9 @@
     "webpack-cli": "^3.3.4"
   },
   "devDependencies": {
+    "jasmine": "^3.4.0",
     "jasmine-core": "^3.4.0",
+    "jasmine-expect-count": "^1.1.1",
     "karma": "^4.1.0",
     "karma-chrome-launcher": "^2.2.0",
     "karma-cli": "^2.0.0",
@@ -57,6 +74,8 @@
     "karma-firefox-launcher": "^1.1.0",
     "karma-jasmine": "^2.0.1",
     "karma-webpack": "^4.0.2",
-    "puppeteer": "^1.17.0"
+    "nyc": "^14.1.1",
+    "puppeteer": "^1.17.0",
+    "rewiremock": "^3.13.7"
   }
 }
