--- a/package.json
+++ b/package.json
@@ -26,15 +26,11 @@
     "Firefox >= 70"
   ],
   "dependencies": {
-    "@babel/core": "^7.4.5",
-    "@babel/plugin-syntax-dynamic-import": "^7.2.0",
-    "@babel/preset-env": "^7.4.5",
-    "@babel/preset-react": "^7.0.0",
-    "@hot-loader/react-dom": "^16.11.0",
     "axios": "^0.19.2",
     "babel-loader": "^8.0.6",
-    "bcrypt": "^3.0.6",
+    "bcryptjs": "^2.4.3",
     "body-parser": "^1.19.0",
+    "compression": "^1.7.4",
     "concurrently": "^5.0.2",
     "cron": "^1.7.1",
     "dotenv": "^8.0.0",
@@ -43,12 +39,31 @@
     "firstline": "^2.0.2",
     "forever": "^2.0.0",
     "formidable": "^1.2.1",
-    "image-webpack-loader": "^6.0.0",
     "mysql2": "^2.1.0",
     "query-string": "^6.10.1",
+    "sendmail": "^1.4.1"
+  },
+  "devDependencies": {
+    "@babel/core": "^7.4.5",
+    "@babel/plugin-syntax-dynamic-import": "^7.2.0",
+    "@babel/preset-env": "^7.4.5",
+    "@babel/preset-react": "^7.0.0",
+    "@hot-loader/react-dom": "^16.11.0",
+    "clean-webpack-plugin": "^3.0.0",
+    "compression-webpack-plugin": "^3.1.0",
+    "copy-webpack-plugin": "^5.1.1",
+    "css-loader": "^3.4.2",
+    "file-loader": "^5.0.2",
+    "html-loader": "^0.5.5",
+    "html-webpack-plugin": "^3.2.0",
+    "image-webpack-loader": "^6.0.0",
+    "mini-css-extract-plugin": "^0.9.0",
+    "node-sass": "^4.13.1",
+    "nodemon": "^2.0.2",
     "react": "^16.12.0",
     "react-dom": "^16.8.6",
     "react-ga": "^2.5.7",
+    "react-hot-loader": "^4.12.18",
     "react-loadable": "^5.5.0",
     "react-markdown": "^4.0.8",
     "react-redux": "^7.0.3",
@@ -59,24 +74,10 @@
     "redux-devtools-dock-monitor": "^1.1.3",
     "redux-devtools-log-monitor": "^1.4.0",
     "redux-thunk": "^2.3.0",
-    "sendmail": "^1.4.1",
-    "webpack": "^4.32.2",
-    "webpack-cli": "^3.3.2"
-  },
-  "devDependencies": {
-    "clean-webpack-plugin": "^3.0.0",
-    "compression-webpack-plugin": "^3.1.0",
-    "copy-webpack-plugin": "^5.1.1",
-    "css-loader": "^3.4.2",
-    "file-loader": "^5.0.2",
-    "html-loader": "^0.5.5",
-    "html-webpack-plugin": "^3.2.0",
-    "mini-css-extract-plugin": "^0.9.0",
-    "node-sass": "^4.13.1",
-    "nodemon": "^2.0.2",
-    "react-hot-loader": "^4.12.18",
     "sass-loader": "^8.0.2",
     "style-loader": "^1.1.3",
+    "webpack": "^4.32.2",
+    "webpack-cli": "^3.3.2",
     "webpack-dev-server": "^3.10.1"
   }
 }
