--- a/package.json
+++ b/package.json
@@ -41,7 +41,8 @@
     "formidable": "^1.2.1",
     "mysql2": "^2.1.0",
     "query-string": "^6.10.1",
-    "sendmail": "^1.4.1"
+    "sendmail": "^1.4.1",
+    "url-loader": "^3.0.0"
   },
   "devDependencies": {
     "@babel/core": "^7.4.5",
