--- a/package.json
+++ b/package.json
@@ -22,12 +22,11 @@
   "author": "Kayne Ruse",
   "license": "",
   "browserslist": [
-    "Chrome >= 60",
-    "Firefox >= 70"
+    "> 2%",
+    "not IE <=11"
   ],
   "dependencies": {
     "axios": "^0.19.2",
-    "babel-loader": "^8.0.6",
     "bcryptjs": "^2.4.3",
     "body-parser": "^1.19.0",
     "compression": "^1.7.4",
@@ -41,25 +40,28 @@
     "formidable": "^1.2.1",
     "mysql2": "^2.1.0",
     "query-string": "^6.10.1",
-    "sendmail": "^1.4.1",
-    "url-loader": "^3.0.0"
+    "sendmail": "^1.4.1"
   },
   "devDependencies": {
     "@babel/core": "^7.4.5",
     "@babel/plugin-syntax-dynamic-import": "^7.2.0",
     "@babel/preset-env": "^7.4.5",
     "@babel/preset-react": "^7.0.0",
+    "babel-loader": "^8.0.6",
     "clean-webpack-plugin": "^3.0.0",
     "compression-webpack-plugin": "^3.1.0",
     "copy-webpack-plugin": "^5.1.1",
     "css-loader": "^3.4.2",
+    "cssnano": "^4.1.10",
     "file-loader": "^5.0.2",
     "html-loader": "^0.5.5",
     "html-webpack-plugin": "^3.2.0",
     "image-webpack-loader": "^6.0.0",
     "mini-css-extract-plugin": "^0.9.0",
-    "node-sass": "^4.13.1",
     "nodemon": "^2.0.2",
+    "postcss-import": "^12.0.1",
+    "postcss-loader": "^3.0.0",
+    "postcss-preset-env": "^6.7.0",
     "react": "^16.12.0",
     "react-dom": "^16.8.6",
     "react-ga": "^2.5.7",
@@ -74,8 +76,8 @@
     "redux-devtools-dock-monitor": "^1.1.3",
     "redux-devtools-log-monitor": "^1.4.0",
     "redux-thunk": "^2.3.0",
-    "sass-loader": "^8.0.2",
     "style-loader": "^1.1.3",
+    "url-loader": "^3.0.0",
     "webpack": "^4.32.2",
     "webpack-cli": "^3.3.2",
     "webpack-dev-server": "^3.10.1"
