--- a/package.json
+++ b/package.json
@@ -41,12 +41,15 @@
     "firstline": "^2.0.2",
     "forever": "^2.0.0",
     "formidable": "^1.2.1",
+    "markdown-to-jsx": "^6.10.3",
     "mysql2": "^2.1.0",
     "passport": "^0.4.1",
     "passport-google-oauth20": "^2.0.0",
     "passport-local": "^1.0.0",
     "query-string": "^6.10.1",
-    "sendmail": "^1.4.1"
+    "raw-loader": "^4.0.0",
+    "sendmail": "^1.4.1",
+    "unistore": "^3.5.1"
   },
   "devDependencies": {
     "@babel/core": "^7.4.5",
@@ -54,6 +57,7 @@
     "@babel/preset-env": "^7.4.5",
     "@babel/preset-react": "^7.0.0",
     "babel-loader": "^8.0.6",
+    "babel-plugin-transform-react-jsx": "^6.24.1",
     "clean-webpack-plugin": "^3.0.0",
     "compression-webpack-plugin": "^3.1.0",
     "copy-webpack-plugin": "^5.1.1",
@@ -63,28 +67,24 @@
     "html-loader": "^0.5.5",
     "html-webpack-plugin": "^3.2.0",
     "image-webpack-loader": "^6.0.0",
+    "markdown-loader": "^5.1.0",
     "mini-css-extract-plugin": "^0.9.0",
     "nodemon": "^2.0.2",
     "postcss-import": "^12.0.1",
     "postcss-loader": "^3.0.0",
     "postcss-preset-env": "^6.7.0",
-    "react": "^16.12.0",
-    "react-dom": "^16.8.6",
+    "preact": "^10.2.1",
+    "preact-async-route": "^2.2.1",
+    "preact-compat": "^3.19.0",
+    "preact-router": "^3.2.1",
+    "proptypes": "^1.1.0",
     "react-ga": "^2.5.7",
-    "react-hot-loader": "^4.12.18",
-    "react-loadable": "^5.5.0",
     "react-markdown": "^4.0.8",
-    "react-redux": "^7.0.3",
-    "react-router": "^5.0.0",
-    "react-router-dom": "^5.0.0",
-    "redux": "^4.0.1",
-    "redux-devtools": "^3.5.0",
-    "redux-devtools-dock-monitor": "^1.1.3",
-    "redux-devtools-log-monitor": "^1.4.0",
-    "redux-thunk": "^2.3.0",
+  
     "style-loader": "^1.1.3",
     "url-loader": "^3.0.0",
     "webpack": "^4.32.2",
+    "webpack-bundle-analyzer": "^3.6.0",
     "webpack-cli": "^3.3.2",
     "webpack-dev-server": "^3.10.1"
   }
