--- a/package.json
+++ b/package.json
@@ -56,6 +56,7 @@
     "@babel/plugin-syntax-dynamic-import": "^7.2.0",
     "@babel/preset-env": "^7.4.5",
     "@babel/preset-react": "^7.0.0",
+    "@fullhuman/postcss-purgecss": "^2.0.6",
     "babel-loader": "^8.0.6",
     "babel-plugin-transform-react-jsx": "^6.24.1",
     "clean-webpack-plugin": "^3.0.0",
@@ -73,15 +74,14 @@
     "postcss-import": "^12.0.1",
     "postcss-loader": "^3.0.0",
     "postcss-preset-env": "^6.7.0",
-    "preact": "^10.2.1",
+    "preact": "^10.3.0",
     "preact-async-route": "^2.2.1",
-    "preact-compat": "^3.19.0",
     "preact-router": "^3.2.1",
     "proptypes": "^1.1.0",
     "react-ga": "^2.5.7",
     "react-markdown": "^4.0.8",
-  
     "style-loader": "^1.1.3",
+    "tailwindcss": "^1.1.4",
     "url-loader": "^3.0.0",
     "webpack": "^4.32.2",
     "webpack-bundle-analyzer": "^3.6.0",
