--- a/package.json
+++ b/package.json
@@ -28,6 +28,12 @@
   "sideEffects": [
     "*.css"
   ],
+  "prettier": {
+    "useTabs": true,
+    "printWidth": 90,
+    "endOfLine": "auto",
+    "tabWidth": 2
+  },
   "dependencies": {
     "axios": "^0.19.2",
     "bcryptjs": "^2.4.3",
@@ -81,6 +87,7 @@
     "react-ga": "^2.5.7",
     "react-markdown": "^4.0.8",
     "style-loader": "^1.1.3",
+    "svg-inline-loader": "^0.8.0",
     "tailwindcss": "^1.1.4",
     "url-loader": "^3.0.0",
     "webpack": "^4.32.2",
