--- a/package.json
+++ b/package.json
@@ -44,6 +44,7 @@
     "dotenv": "^8.0.0",
     "express": "^4.17.1",
     "express-session": "^1.17.0",
+    "express-static-gzip": "^2.0.6",
     "firstline": "^2.0.2",
     "forever": "^2.0.0",
     "formidable": "^1.2.1",
