--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,32 +1,32 @@
 version: '3'
 services:
-  dev:
-    image: node:13-alpine
-    volumes:
-      - .:/usr/src/service
-      - /usr/src/service/node_modules
-    working_dir: /usr/src/service
-    command: sh -c "npm install --quiet && npm run dev"
-    ports:
-      - 3000:3000
-      - 3001:3001
-    depends_on:
-      - db
-    environment:
-      - DATABASE_URL=mysql://dbuser:dbpass@db/dbname
-      - DB_HOST=db
-      - DB_USER=dbuser
-      - DB_PASS=dbpass
-      - DB_NAME=dbname
-      - DB_PORT=3306
-    links: 
-      - db
+  # dev:
+  #   image: node:13-alpine
+  #   volumes:
+  #     - .:/usr/src/service
+  #     - /usr/src/service/node_modules
+  #   working_dir: /usr/src/service
+  #   command: sh -c "npm install --quiet && npm run dev"
+  #   ports:
+  #     - 3000:3000
+  #     - 3001:3001
+  #   depends_on:
+  #     - db
+  #   environment:
+  #     - DATABASE_URL=mysql://dbuser:dbpass@db/dbname
+  #     - DB_HOST=db
+  #     - DB_USER=dbuser
+  #     - DB_PASS=dbpass
+  #     - DB_NAME=dbname
+  #     - DB_PORT=3306
+  #   links: 
+  #     - db
   db:
-    image: mysql
-    command: --default-authentication-plugin=mysql_native_password
+    image: mysql:5.7
+    # command: --default-authentication-plugin=mysql_native_password
     restart: unless-stopped
-    # ports:
-    # - 3306:3306
+    ports:
+    - 3306:3306
     environment:
       MYSQL_ROOT_PASSWORD: RootPassword
       MYSQL_DATABASE: dbname
