--- a/package.json
+++ b/package.json
@@ -28,6 +28,10 @@
   "sideEffects": [
     "*.css"
   ],
+  "engines": {
+    "node": ">=14.5.0",
+    "npm": ">=6.14.5"
+  },
   "prettier": {
     "useTabs": true,
     "printWidth": 90,
@@ -39,61 +43,61 @@
     "bcryptjs": "^2.4.3",
     "body-parser": "^1.19.0",
     "compression": "^1.7.4",
-    "concurrently": "^5.0.2",
+    "concurrently": "^5.2.0",
     "cron": "^1.8.2",
-    "dotenv": "^8.0.0",
+    "dotenv": "^8.2.0",
     "express": "^4.17.1",
-    "express-session": "^1.17.0",
-    "express-static-gzip": "^2.0.6",
+    "express-session": "^1.17.1",
+    "express-static-gzip": "^2.0.7",
     "firstline": "^2.0.2",
-    "forever": "^2.0.0",
+    "forever": "^3.0.0",
     "formidable": "^1.2.2",
-    "markdown-to-jsx": "^6.10.3",
+    "markdown-to-jsx": "^6.11.4",
     "mysql2": "^2.1.0",
     "passport": "^0.4.1",
     "passport-google-oauth20": "^2.0.0",
     "passport-local": "^1.0.0",
-    "query-string": "^6.11.1",
-    "raw-loader": "^4.0.0",
+    "query-string": "^6.13.1",
+    "raw-loader": "^4.0.1",
     "sendmail": "^1.4.1",
     "unistore": "^3.5.1"
   },
   "devDependencies": {
-    "@babel/core": "^7.8.7",
-    "@babel/plugin-syntax-dynamic-import": "^7.2.0",
-    "@babel/preset-env": "^7.8.7",
-    "@babel/preset-react": "^7.0.0",
-    "@fullhuman/postcss-purgecss": "^2.0.6",
-    "babel-loader": "^8.0.6",
+    "@babel/core": "^7.10.5",
+    "@babel/plugin-syntax-dynamic-import": "^7.8.3",
+    "@babel/preset-env": "^7.10.4",
+    "@babel/preset-react": "^7.10.4",
+    "@fullhuman/postcss-purgecss": "^2.3.0",
+    "babel-loader": "^8.1.0",
     "babel-plugin-transform-react-jsx": "^6.24.1",
     "clean-webpack-plugin": "^3.0.0",
-    "compression-webpack-plugin": "^3.1.0",
-    "copy-webpack-plugin": "^5.1.1",
-    "css-loader": "^3.4.2",
+    "compression-webpack-plugin": "^4.0.0",
+    "copy-webpack-plugin": "^6.0.3",
+    "css-loader": "^3.6.0",
     "cssnano": "^4.1.10",
-    "file-loader": "^5.0.2",
-    "html-loader": "^0.5.5",
-    "html-webpack-plugin": "^3.2.0",
+    "file-loader": "^6.0.0",
+    "html-loader": "^1.1.0",
+    "html-webpack-plugin": "^4.3.0",
     "image-webpack-loader": "^6.0.0",
     "markdown-loader": "^5.1.0",
     "mini-css-extract-plugin": "^0.9.0",
-    "nodemon": "^2.0.2",
+    "nodemon": "^2.0.4",
     "postcss-import": "^12.0.1",
     "postcss-loader": "^3.0.0",
     "postcss-preset-env": "^6.7.0",
-    "preact": "^10.3.4",
+    "preact": "^10.4.6",
     "preact-async-route": "^2.2.1",
     "preact-router": "^3.2.1",
     "proptypes": "^1.1.0",
-    "react-ga": "^2.5.7",
-    "react-markdown": "^4.0.8",
-    "style-loader": "^1.1.3",
-    "svg-inline-loader": "^0.8.0",
-    "tailwindcss": "^1.1.4",
-    "url-loader": "^3.0.0",
-    "webpack": "^4.42.0",
-    "webpack-bundle-analyzer": "^3.6.1",
-    "webpack-cli": "^3.3.11",
-    "webpack-dev-server": "^3.10.1"
+    "react-ga": "^3.1.2",
+    "react-markdown": "^4.3.1",
+    "style-loader": "^1.2.1",
+    "svg-inline-loader": "^0.8.2",
+    "tailwindcss": "^1.5.2",
+    "url-loader": "^4.1.0",
+    "webpack": "^4.44.0",
+    "webpack-bundle-analyzer": "^3.8.0",
+    "webpack-cli": "^3.3.12",
+    "webpack-dev-server": "^3.11.0"
   }
 }
